--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,4 +5,4 @@ emex.url=http://ws.emex.ru/EmExService.asmx
 excelFileName=local.xlsx
 mikado.login=52833
 mikado.password=ttr24rt1
-mikado.url=https://www.mikado-parts.ru/login.asp
+mikado.url=https://www.mikado-parts.ru
