--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,7 @@
 	</scm>
 	<properties>
 		<start-class>com.example.partspracing.PartsPricingApplication</start-class>
-		<java.version>17</java.version>
+		<java.version>23</java.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -97,7 +97,21 @@
 			<artifactId>httpclient</artifactId>
 			<version>4.5.14</version>
 		</dependency>
-
+		<dependency>
+			<groupId>org.jsoup</groupId>
+			<artifactId>jsoup</artifactId>
+			<version>1.19.1</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.httpcomponents.client5</groupId>
+			<artifactId>httpclient5</artifactId>
+			<version>5.4.3</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.httpcomponents.core5</groupId>
+			<artifactId>httpcore5</artifactId>
+			<version>5.3.4</version>
+		</dependency>
 
 		<!--dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
