--- a/pom.xml
+++ b/pom.xml
@@ -112,6 +112,14 @@
 			<artifactId>httpcore5</artifactId>
 			<version>5.3.4</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-cache</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.github.ben-manes.caffeine</groupId>
+			<artifactId>caffeine</artifactId>
+		</dependency>
 
 		<!--dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
