--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,12 @@
 spring.application.name=partspracing
-forumAuto.url=https://api.forum-auto.ru/v2/listGoods?login=507451_chudinnv&pass=iZjQMj5z9Acj&art=partNumber&cross=1
+forumAuto.url=https://api.forum-auto.ru/v2/listGoods?login=507451_chudinnv&pass=iZjQMj5z9Acj&art=partNumber&cross=1&br=brand
 rossko.url=http://api.rossko.ru/service/v2.1/GetSearch
 emex.url=http://ws.emex.ru/EmExService.asmx
+emex.url.for.brand=http://ws.emex.ru/EmExDictionaries.asmx
 excelFileName=local.xlsx
 mikado.login=52833
 mikado.password=ttr24rt1
 mikado.url=https://www.mikado-parts.ru/
+spring.cache.type=caffeine
+spring.cache.cache-names=brandsCache
+spring.cache.caffeine.spec=expireAfterWrite=1h,maximumSize=1
